[project]
name = "mult"                   
version = "0.1.0"
description = "MulT (yaohungt) packaged for pip"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch",
  "numpy",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*"]             
